<resources>

    <string name="welcome_to_call_to_duty">Welcome to Call to Duty.</string>
    <string name="a_game_that_simulate_the_interaction_between_a_caller_and_the_dispatcher">A game that simulate the interaction between a caller and the dispatcher.</string>
    <string name="app_name">CalltoDuty</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="create_account">Create Account</string>
    <string name="create">Create</string>
    <string name="Play" />
    <string name="play">Play</string>
    <string name="option">Option</string>
    <string name="credits">Credits</string>
    <string name="logo_desc" />
    <string name="play_button_desc" />
    <string name="option_button_desc" />
    <string name="credit_button_desc" />
    <string name="Difficulty">DIFFICULTY</string>
    <string name="incoming_call">INCOMING CALL:</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="fail_image_desc" />
    <string name="close_button_desc" />
    <string name="success_image_desc" />
    <string name="next_button_desc" />

    <string name="login">Login</string>
    <string name="option_txt">OPTION</string>
    <string name="music_btn" />
    <string name="sound_btn" />
    <string name="changeNickname_btn_desc" />
    <string name="deleteAccount_btn_desc" />
    <string name="change_nickname_txt">CHANGE NICKNAME</string>
    <string name="close_btn_desc" />
    <string name="change_button" />
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your Account?</string>
    <string name="yes_button_desc" />
    <string name="no_button_desc" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scenarios">Scenarios</string>
    <string name="reset">reset</string>
    <string name="scenario_image_description" />
    <string name="confirm_button_desc" />
</resources>