<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_bg"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="100dp">


        <ImageView
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_desc"/>

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:layout_marginTop="10dp"
            android:src="@drawable/play_btn"
            android:contentDescription="@string/play_button_desc"/>

        <ImageView
            android:id="@+id/optionBtn"
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:layout_marginTop="10dp"
            android:src="@drawable/option_btn"
            android:contentDescription="@string/option_button_desc"/>

        <ImageView
            android:id="@+id/creditsButton"
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:layout_marginTop="10dp"
            android:src="@drawable/credit_btn"
            android:contentDescription="@string/credit_button_desc"/>

    </LinearLayout>

</RelativeLayout>