<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_bg"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".ChangeNIcknamePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:gravity="top|center_horizontal"
        android:background="@drawable/dia_container"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/difficultyTitle"
                android:text="@string/change_nickname_txt"
                android:textSize="25sp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="65dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/closeButton"
                android:src="@drawable/close_btn"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/close_btn_desc"
                android:layout_marginEnd="45dp"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/nicknameInput"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/enter_nickname"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeButton"
            android:src="@drawable/nickname_btn"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/change_button"/>


    </LinearLayout>

</RelativeLayout>