<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/splashscreen_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".OptionScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:gravity="top|center_horizontal"
        android:background="@drawable/dia_container"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/difficultyTitle"
                android:text="@string/option_txt"
                android:textSize="38sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="110dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/closeButton"
                android:src="@drawable/close_btn"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/close_btn_desc"
                android:layout_marginEnd="45dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/musicButton"
                android:src="@drawable/music_btn"
                android:layout_alignParentStart="true"
                android:layout_marginStart="35dp"
                android:contentDescription="@string/music_btn"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/musicSwitch"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:layout_marginEnd="90dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/soundButton"
                android:src="@drawable/sound_btn"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginStart="35dp"
                android:contentDescription="@string/sound_btn"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/soundSwitch"
                android:layout_alignParentEnd="true"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="90dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cnButton"
                android:layout_alignParentStart="true"
                android:layout_marginStart="70dp"
                android:src="@drawable/change_btn"
                android:contentDescription="@string/changeNickname_btn_desc"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="70dp"
                android:src="@drawable/delete_btn"
                android:contentDescription="@string/deleteAccount_btn_desc"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>