<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_bg"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".DeletionPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="top|center_horizontal"
        android:background="@drawable/dia_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficultyTitle"
            android:text="@string/are_you_sure_you_want_to_delete_your_account"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yesButton"
                android:src="@drawable/yes_btn"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/yes_button_desc"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noButton"
                android:src="@drawable/no_btn"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:contentDescription="@string/no_button_desc"/>

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>