<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/DarkBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".OptionPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:gravity="top|center_horizontal"
        android:background="@drawable/container_level"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/difficultyTitle"
                android:text="@string/option_txt"
                android:textSize="38sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="120dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/close_btn"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/option_txt"
                android:layout_marginEnd="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:src="@drawable/music_btn"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/music_btn"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="85dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:src="@drawable/sound_btn"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/sound_btn"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="85dp"/>

        </RelativeLayout>
    </LinearLayout>





</RelativeLayout>